# gamerslauncher

./: .gitignore  CMakeLists.txt  README.md  translations.qrc
assets/translations/: de.ts  en.ts  tr.ts
include/: logger.h  loggerstream.hpp
src/: main.cpp
src/etc/: enums.hpp  instances.hpp  result.hpp  string.hpp  utils.hpp
src/mgr/: appdata.cpp  appdata.hpp  appdatamgr.cpp  appdatamgr.hpp  download.cpp  download.hpp  language.cpp  language.hpp  settings.cpp  settings.hpp  settingsmgr.cpp  settingsmgr.hpp  version.hpp
src/ui/: logindialog.cpp  logindialog.h  logindialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/util/: jsonstructs.hpp  jsonvalidator.cpp  jsonvalidator.hpp  jsonworker.cpp  jsonworker.hpp
